replacing image source for avatar on github while the local image gets updated on github.io

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <div class="ui stackable grid wrapper">
       <aside class="five wide computer column profile-wrapper">
         <div class="ui segment profile-container">
-          <img class="profile" src="assets/images/profile.jpg" alt="Luis Alberto Nunez profile picture">
+          <!-- <img class="profile" src="assets/images/profile.jpg" alt="Luis Alberto Nunez profile picture"> -->
+          <img class="profile" src="https://avatars3.githubusercontent.com/u/1234692?s=460&v=4" alt="Luis Alberto Nunez profile picture">
           <h1 class="name">Luis Alberto Nunez</h1>
           <h3 class="description">Full-Stack Developer</h3>
         </div>
