spelling and redaction fixes

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <section id="summary" class="summary-section">
           <h2 class="title"><i class="icon user"></i>Career Profile</h2>
           <div class="summary">
-            <p>Full-Stack developer with ample experience creating web solutions and products from design to implementation. I enjoy working with international teams, and look forward new challenges and learning experiences. I embrace changing environments and opportunities to use trending technologies. I like to take leadership roles and actively participate on the definition of solutions.</p>
+            <p>Full-Stack developer with ample experience creating web solutions and products from design to implementation. I enjoy working with international teams, and look forward to new challenges and learning experiences. I embrace changing environments and opportunities to use trending technologies. I like to take leadership roles and actively participate on the definition of solutions.</p>
           </div>
         </section>
         <section id="skills" class="skills-section">
@@ -208,7 +208,7 @@
               <p>Definition of architecture requirements for a Rapid Application Development (RAD) cloud tool.</p>
               <p>Management of development team for Platform initiative, using Agile and Scrum methodologies.</p>
               <p>Development of precision growth solutions using HTML5, JavaScript (Vue.js) and CSS3.</p>
-              <p>Development of a Node.js backend using FeathersJS as a JavaScript backend framework using REST standard with JSON responses.</p>
+              <p>Development of a Node.js backend using FeathersJS as a JavaScript backend framework and REST standard with JSON responses.</p>
               <p>Development of a backend Model Engine for creation of table definitions based on JSON and REST Services.</p>
               <p>Development of a backend Workflow Engine for the execution of tasks and scheduling.</p>
               <p>Development of a backend Interaction Engine for the dependency injection and compilation of views created from UI Building Blocks. Server Side Rendering.</p>
@@ -292,7 +292,7 @@
             <div class="details">
               <p>Development of a QR-based tracking solution for scheduling and events for a university medical conference.</p>
               <p>Development with PHP, JQuery and Phonegap.</p>
-              <p>Most of the registration process was already done when I started this project, so I had to do some cleaning on the data base and several refactors to adecuate the schema definition for the handling of events and QR tracking. This was my first mobile application! I had to ask a friend to lend me his Mac and iPhone to test the app on several devices.</p>
+              <p>Most of the registration process was already done when I started this project, so I had to do some cleaning on the database and several refactors to adequate the schema definition for the handling of events and QR tracking. This was my first mobile application! I had to ask a friend to lend me his Mac and iPhone to test the app on several devices.</p>
             </div>
           </div>
         </section>
