spelling and redaction fixes

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
         <section id="summary" class="summary-section">
           <h2 class="title"><i class="icon user"></i>Career Profile</h2>
           <div class="summary">
-            <p>Full-Stack developer with ample experience creating web solutions and products from design to implementation. I enjoy working with international teams, and look forward to new challenges and learning experiences. I embrace changing environments and opportunities to use trending technologies. I like to take leadership roles and actively participate on the definition of solutions.</p>
+            <p>Full-Stack developer with ample experience creating web solutions and products from design to implementation. I enjoy working with international teams, and look forward to new challenges and learning experiences. I embrace changing environments and opportunities to use trending technologies and like to take leadership roles, actively participating on the definition of solutions.</p>
           </div>
         </section>
         <section id="skills" class="skills-section">
-          <h2 class="title"><i class="icon code"></i>Tecnhologies</h2>
+          <h2 class="title"><i class="icon code"></i>Technologies</h2>
           <p>Experience in the following technologies:</p>
           <div class="ui list skillset">
             <div class="item">
@@ -176,7 +176,7 @@
             <div class="item">
               <h3>APIs and Services</h3>
               <div class="content">
-                D3, ChartJS, Google Cloud Plarform (GCP), Twilio API, Salesforce API, Facebook API, Twitter API, Speech To Text Technologies, Google Maps API
+                D3, ChartJS, Google Cloud Platform (GCP), Twilio API, Salesforce API, Facebook API, Twitter API, Speech To Text Technologies, Google Maps API
               </div>
             </div>
             <div class="item">
@@ -188,7 +188,7 @@
             <div class="item">
               <h3>Methodologies</h3>
               <div class="content">
-                Agile, Scrum, Kanban, Design Thinking, Test Driven Development, Behavior Driven Development, Continuos Delivery
+                Agile, Scrum, Kanban, Design Thinking, Test Driven Development, Behavior Driven Development, Continuous Delivery
               </div>
             </div>
           </div>
@@ -212,8 +212,8 @@
               <p>Development of a backend Model Engine for creation of table definitions based on JSON and REST Services.</p>
               <p>Development of a backend Workflow Engine for the execution of tasks and scheduling.</p>
               <p>Development of a backend Interaction Engine for the dependency injection and compilation of views created from UI Building Blocks. Server Side Rendering.</p>
-              <p>Integration with Google Cloud Platform services for Platfom features.</p>
-              <p>Continuous Integraton using GitLab for source control and GitLabCI with Docker.</p>
+              <p>Integration with Google Cloud Platform services for Platform features.</p>
+              <p>Continuous Integration using GitLab for source control and GitLabCI with Docker.</p>
             </div>
           </div>
           <div class="item">
@@ -235,7 +235,7 @@
             <div class="meta">
               <div class="job-title">
                 <h3 class="role">SAP Consultant, Full-Stack Developer, Builders Lead Developer</h3>
-                <div class="time">Jan 2013 - June 2015</div>
+                <div class="time">Jan 2013 - Jun 2015</div>
               </div>
               <div class="company"><a href="http://agilesolutions.com/">Agile Solutions</a> - Tegucigalpa, Honduras</div>
               <div class="company"><a href="https://es.linkedin.com/company/alltax">AllTax Platform</a> - Rio de Janeiro, Brazil</div>
@@ -262,9 +262,9 @@
               <div class="company"><a href="http://hamlets.communityforge.net/">Hamlets Drupal Demo</a> - Curitiba, Brazil (Remote)</div>
             </div>
             <div class="details">
-              <p>Development of a <a href="https://appetize.io/app/ynhytn8ab25dg0t6dycmdkm10c?device=nexus5&scale=75&orientation=portrait&osVersion=7.1" target="_blank">mobile application</a> for time tracking and exchange using alternative currencies between communitites.</p>
+              <p>Development of a <a href="https://appetize.io/app/ynhytn8ab25dg0t6dycmdkm10c?device=nexus5&scale=75&orientation=portrait&osVersion=7.1" target="_blank">mobile application</a> for time tracking and exchange using alternative currencies between communities.</p>
               <p>Development with Ionic and AngularJS.</p>
-              <p>A really interesting thing on <a href="https://github.com/lordvkrum/LETS-mobile-Application" target="_blank">this project</a> was the need to build dynamic forms based on the requeriments of each community. We used the OPTIONS HTTP verb to define the objects and their properties, and a custom component in the mobile UI rendered inputs and validations based on those characteristics.</p>
+              <p>A really interesting thing on <a href="https://github.com/lordvkrum/LETS-mobile-Application" target="_blank">this project</a> was the need to build dynamic forms based on the requirements of each community. We used the OPTIONS HTTP verb to define the objects and their properties, and a custom component in the mobile UI rendered inputs and validations based on those characteristics.</p>
             </div>
           </div>
           <div class="item">
