--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             <div class="item skills">
               <i class="icon code"></i>
               <div class="content">
-                <a href="#skills">Tecnhologies</a>
+                <a href="#skills">Technologies</a>
               </div>
             </div>
             <div class="item experience">
