adding skype contact info

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
                 <a href="https://github.com/lordvkrum/" target="_blank">github.com/lordvkrum</a>
               </div>
             </div>
+            <div class="item skype">
+              <i class="icon skype"></i>
+              <div class="content">
+                <a href="https://join.skype.com/invite/TbbwRYpnAtrM" target="_blank">skype/lord_vkrum</a>
+              </div>
+            </div>
           </div>
         </div>
         <div class="ui segment education-container container-block">
@@ -245,7 +251,7 @@
               <p>Maintenance of existing applications: websites, SAP environments, ABAP applications.</p>
               <p>Database design and development: MySQL and HANA DB.</p>
               <p>Development of a Dynamic Reports in-house tool using SAP tools: HANA Modeling, SAP HANA XS, SAPUI5.</p>
-              <p>Optimization and Setup of Front End Arquitecture with SAP tools and guidelines: SAP Fiori.</p>
+              <p>Optimization and Setup of Front End Architecture  with SAP tools and guidelines: SAP Fiori.</p>
               <p>Management of product development teams.</p>
             </div>
           </div>
