updating experiences as of September 2021

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
           <h2 class="container-block-title">Languages</h2>
           <div class="ui list interests-list">
             <div class="item">Spanish <span class="proficiency">(Native)</span></div>
-            <div class="item">English <span class="proficiency">(Professional)</span></div>
-            <div class="item">Portuguese <span class="proficiency">(Professional)</span></div>
+            <div class="item">English <span class="proficiency">(Proficient)</span></div>
+            <div class="item">Portuguese <span class="proficiency">(Proficient)</span></div>
           </div>
         </div>
         <div class="ui segment interests-container container-block">
@@ -90,7 +90,7 @@
             <div class="item">
               <i class="book icon"></i>
               <div class="content">
-                Reading (mostly fiction, rational fiction: <a href="https://parahumans.wordpress.com/" target="_blank">Parahumans!</a> <a href="https://www.fictionpress.com/s/2961893/1/Mother-of-Learning" target="_blank">Mother of Learning!</a>)
+                Reading (mostly fiction: <a href="https://parahumans.wordpress.com/" target="_blank">Parahumans!</a> <a href="https://www.fictionpress.com/s/2961893/1/Mother-of-Learning" target="_blank">Mother of Learning!</a>)
               </div>
             </div>
             <div class="item">
@@ -124,12 +124,11 @@
         <section id="summary" class="summary-section">
           <h2 class="title"><i class="icon user"></i>Career Profile</h2>
           <div class="summary">
-            <p>Full-Stack developer with ample experience creating web solutions and products from design to implementation. I enjoy working with international teams, and look forward to new challenges and learning experiences. I embrace changing environments and opportunities to use trending technologies and like to take leadership roles, actively participating on the definition of solutions.</p>
+            <p>Full Stack Developer with ample experience creating web solutions and products from design to implementation. I enjoy working with international teams, and look forward to new challenges and learning experiences. I embrace changing environments and opportunities to use trending technologies and like to take leadership roles, actively participating on the definition of solutions.</p>
           </div>
         </section>
         <section id="skills" class="skills-section">
           <h2 class="title"><i class="icon code"></i>Technologies</h2>
-          <p>Experience in the following technologies:</p>
           <div class="ui list skillset">
             <div class="item">
               <h3>Web</h3>
@@ -150,9 +149,9 @@
               </div>
             </div>
             <div class="item">
-              <h3>Test Driven Development</h3>
+              <h3>Testing and Code Quality Assurance</h3>
               <div class="content">
-                Jasmin, Karma, Mocha
+                Jest, Jasmin, Karma, Mocha, Cucumber
               </div>
             </div>
             <div class="item">
@@ -204,22 +203,46 @@
           <div class="item">
             <div class="meta">
               <div class="job-title">
-                <h3 class="role">Platform Initiative Lead Developer</h3>
-                <div class="time">May 2016 - Present</div>
+                <h3 class="role">Software Architect<br />Full Stack Engineer</h3>
+                <div class="time">2019 - Present</div>
+              </div>
+              <div class="company"><a href="https://www.monitorprod.com.br/">MonitorProd</a> - Curitiba, Brazil</div>
+            </div>
+            <div class="details">
+              <p>Startup app with monitoring capabilities for production of plastic injection molding machines.</p>
+              <p>Development of web app that allows the control of production orders and configurations around scheduling.</p>
+              <p>Development of web dashboard with reporting tools.</p>
+            </div>
+          </div>
+          <div class="item">
+            <div class="meta">
+              <div class="job-title">
+                <h3 class="role">FrontEnd Engineer</h3>
+                <div class="time">April 2018 - Present</div>
+              </div>
+              <div class="company"><a href="https://moduscreate.com/">Modus Create</a> - Curitiba, Brazil (Remote)</div>
+            </div>
+            <div class="details">
+              <p>FrontEnd React Developer supporting Kaplan. New implementation for core features to offer users a modern experience for different study tools</p>
+              <p>FrontEnd AngularJS Developer supporting Pfizer. Release of existing app to new markets, adding new configurations and automatization of tasks for localization efforts.</p>
+              <p>FrontEnd React Developer supporting Motion Industries. Updating implementation of sales app, supporting sales representatives and interactions with customers.</p>
+            </div>
+          </div>
+          <div class="item">
+            <div class="meta">
+              <div class="job-title">
+                <h3 class="role">Cloud Platform Lead Developer</h3>
+                <div class="time">May 2016 – April 2018</div>
               </div>
               <div class="company"><a href="http://agilesolutions.com/">Agile Solutions</a> - Tegucigalpa, Honduras (Remote)/Curitiba, Brazil (Remote)</div>
             </div>
             <div class="details">
-              <p>Lead Developer for Platform initiative.</p>
-              <p>Definition of architecture requirements for a Rapid Application Development (RAD) cloud tool.</p>
+              <p>Lead Developer for Platform initiative. Definition of architecture requirements for a Rapid Application Development (RAD) cloud tool.</p>
               <p>Management of development team for Platform initiative, using Agile and Scrum methodologies.</p>
-              <p>Development of precision growth solutions using HTML5, JavaScript (Vue.js) and CSS3.</p>
-              <p>Development of a Node.js backend using FeathersJS as a JavaScript backend framework and REST standard with JSON responses.</p>
               <p>Development of a backend Model Engine for creation of table definitions based on JSON and REST Services.</p>
               <p>Development of a backend Workflow Engine for the execution of tasks and scheduling.</p>
               <p>Development of a backend Interaction Engine for the dependency injection and compilation of views created from UI Building Blocks. Server Side Rendering.</p>
-              <p>Integration with Google Cloud Platform services for Platform features.</p>
-              <p>Continuous Integration using GitLab for source control and GitLabCI with Docker.</p>
+              <p>Integration with Google Cloud Platform services for Platform features. Continuous Integration using GitLab for source control and GitLabCI with Docker.</p>
             </div>
           </div>
           <div class="item">
@@ -240,24 +263,23 @@
           <div class="item">
             <div class="meta">
               <div class="job-title">
-                <h3 class="role">SAP Consultant, Full-Stack Developer, Builders Lead Developer</h3>
+                <h3 class="role">SAP Consultant, Full-Stack Developer, Lead Developer</h3>
                 <div class="time">Jan 2013 - Jun 2015</div>
               </div>
               <div class="company"><a href="http://agilesolutions.com/">Agile Solutions</a> - Tegucigalpa, Honduras</div>
               <div class="company"><a href="https://es.linkedin.com/company/alltax">AllTax Platform</a> - Rio de Janeiro, Brazil</div>
             </div>
             <div class="details">
-              <p>UX development using SAP Fiori Guidelines.</p>
+              <p>Optimization and Setup of Front End Architecture with SAP tools and guidelines: SAP Fiori.</p>
               <p>Maintenance of existing applications: websites, SAP environments, ABAP applications.</p>
               <p>Database design and development: MySQL and HANA DB.</p>
               <p>Development of a Dynamic Reports in-house tool using SAP tools: HANA Modeling, SAP HANA XS, SAPUI5.</p>
-              <p>Optimization and Setup of Front End Architecture  with SAP tools and guidelines: SAP Fiori.</p>
               <p>Management of product development teams.</p>
             </div>
           </div>
         </section>
         <section id="projects" class="projects-section experience-section">
-          <h2 class="title"><i class="icon star outline"></i>Projects and Personal Initiatives</h2>
+          <h2 class="title"><i class="icon star outline"></i>Other Projects</h2>
           <div class="item">
             <div class="meta">
               <div class="job-title">
@@ -328,7 +350,7 @@
             <div class="item projects">
               <i class="icon star outline"></i>
               <div class="content">
-                <a href="#projects">Projects</a>
+                <a href="#projects">Other Projects</a>
               </div>
             </div>
           </div>
